<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FaceMap</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <color name="blue">#3399CC</color>
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="confirmPasswd">Confirm Password</string>
    <string name="next">Next</string>
    <string name="ok">ok</string>
    <string name="groups">Groups</string>
    <string name="add">+</string>
    <string name="nearbyGroup">Nearby Friends</string>
    <string name="groupExample">Good Friends</string>
    <string name="membersButton">Members</string>
    <string name="name1">Amy</string>
    <string name="name2">Bob</string>
    <string name="addMemberButton">Add Members</string>
    <string name="deleteMemberButton">Delete Members</string>
    <string name="blockMemberButton">Block Members</string>
    <string name="confirmAdd">Add</string>
    <string name="confirmDelete">Delete</string>
    <string name="confirmBlock">Block</string>
    <string name="addAContact">Add A Contact</string>
    <string name="phone">Phone</string>
    <string name="or">Or</string>
    <string name="request">Request</string>
    <string name="chooseFromContact">Choose From Phone Contact</string>
    <string name="allContacts">All Contacts</string>
    <string name="sendSMS">Send SMS\nxxx-xxx-xxxx</string>
    <string name="sendEmail">Send Email\namy@gmail.com</string>
    <string name="sendIM">Send IM\namy@gmail.com</string>
    <string name="addToGroups">Add To Groups</string>
    <string name="block">Block</string>
    <string name="delete">Delete</string>
    <string name="groupExample2">Classmates</string>
    <string name="myInfo">My Info</string>
    <string name="myName">My Name</string>
    <string name="setVisibility">Set Visibility</string>
    <string name="edit">Edit</string>
    <string name="customMessage">Custom Message</string>
    <string name="phoneNum">123-456-7890</string>
    <string name="emailAddress">myname@gmail.com</string>
    <string name="numofnum">1 of 10</string>
    <string name="visibleTo">Location visible to</string>
    <string name="customMessageExample">いい天気~~</string>
    <string name="nobody">Nobody</string>
    <string name="contacts">Contacts</string>
    <string name="all">All</string>
    <string name="locate">Locate</string>
    <string name="locateNearbyFriends">Locate Nearby Friends</string>
    <string name="locateContacts">Locate Contacts</string>
    <string name="locateGroups">Locate Groups</string>
    <string name="selectRange">Select Locating Range\nDefault is 1 mile</string>
    <string name="miles">miles</string>
    <string name="hello">hello</string>
    <string name="updatedxminago">updated x mins ago</string>
    <string name="sendGroupSMS">Send Grouop SMS</string>
    <string name="sendGroupEmail">Send Group Email</string>
    <string name="call">Call\nxxx-xxx-xxxx</string>
    <string name="communicate">Communicate</string>
    <string name="addGroup">Add A Group</string>
    <string name="groupName">Group Name</string>
    <string name="nextStep">Next</string>
    <string name="selectMembers">Select group members</string>
    <string name="save">save</string>
    <string name="unclassified">Unclassified</string>
    <string name="deleteGroup">Delete Group</string>
    <string name="blockGroup">Block Group</string>
    <string name="unblockGroup">UnBlock Group</string>
    <string name="unblock">Unblock</string>
    <string name="inputYourName">Input Your Name</string>
    <string name="editMyInfo">Edit My Info</string>
    <string name="touchImageToBrowse">Touch Image To Browse From Gallary</string>
    <string name="name">Name</string>
    <string name="saveAtEditMyInfo">save</string>
    <string name="cancelAtEditMyInfo">cancel</string>
    <string name="changePassword">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="logout">logout</string>
    <string name="phoneOrEmail">Phone or Email</string>
    <string name="unblockMembers">Unblock Members</string>
    <string name="friendRequests">Friend Requests</string>
    <string name="orEmail">Or Email</string>
    <string name="everybody">Everybody</string>
    <string name="removeMembers">Remove Members</string>

    <style name="myTheme">
        <item name="android:windowNoTitle">true</item>
        <item name="android:windowBackground">@drawable/background</item>
    </style>
        <string name="visibility">Visible</string>
        <string name="setRange">Set Range</string>
</resources>
