<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:background="@color/blue" android:layout_width="match_parent" android:textStyle="bold" android:gravity="center" android:textSize="40dp" android:id="@+id/NearbyFriendsTitle" android:text="@string/nearbyGroup"></TextView>
    <Button android:layout_height="wrap_content" android:text="@string/membersButton" android:layout_width="match_parent" android:textSize="20dp" android:id="@+id/nearbyMembersButton"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/blockMemberButton" android:textSize="20dp" android:id="@+id/blockNearbyMembersButton"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/unblockMembers" android:textSize="20dp" android:id="@+id/unblockNearbyMembersButton"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/sendGroupEmail" android:textSize="20dp" android:id="@+id/sendNearbyGroupEmailButton"></Button>
    
</LinearLayout>
