<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:gravity="center|center_vertical">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:textSize="30dp" android:textColor="@color/blue" android:textStyle="bold" android:id="@+id/faceMapText" android:layout_marginBottom="70dp"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent" android:orientation="vertical">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/email" android:id="@+id/emailString"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textEmailAddress" android:id="@+id/emailTextAtRegister">
            <requestFocus></requestFocus>
        </EditText>
        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/inputYourNameString" android:text="@string/inputYourName"></TextView>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPersonName" android:id="@+id/inputYourNameText"></EditText>
        <TextView android:text="@string/passwd" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/passwdString" android:layout_height="wrap_content"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textPassword" android:id="@+id/passwdTextAtRegister"></EditText>
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/confirmPasswd" android:id="@+id/confirmPasswdString"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textPassword" android:id="@+id/confirmPasswdText"></EditText>
    </LinearLayout>
    <Button android:layout_width="wrap_content" android:textSize="25dp" android:text="@string/ok" android:id="@+id/okButtonAtRegister" android:onClick="registerPageOkButtonClickHandler" android:layout_height="wrap_content" android:layout_marginTop="30dp"></Button>
    
</LinearLayout>