<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:gravity="center|center_vertical">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:textSize="30dp" android:textColor="@color/blue" android:textStyle="bold" android:layout_marginBottom="100dp" android:id="@+id/faceMapText"></TextView>
    <Button android:layout_height="wrap_content" android:text="@string/register" android:id="@+id/regButton" android:layout_width="200dp" android:textSize="20dp" android:layout_marginBottom="100dp"></Button>
    <Button android:layout_height="wrap_content" android:id="@+id/loginButton" android:layout_width="200dp" android:text="@string/login" android:textSize="20dp"></Button>
    
</LinearLayout>
