<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:background="@color/blue" android:layout_width="match_parent" android:textStyle="bold" android:gravity="center" android:id="@+id/changePasswordTitle" android:text="@string/changePassword" android:textSize="35dp"></TextView>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/oldPasswordString" android:text="@string/oldPassword"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:id="@+id/oldPasswordText">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/newPasswordString" android:text="@string/newPassword"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:id="@+id/newPasswordText"></EditText>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/confirmNewPasswordString" android:text="@string/confirmNewPassword"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:id="@+id/confirmNewPasswordText"></EditText>
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:id="@+id/okButtonAtChangePasswd" android:text="@string/ok" android:textSize="20dp" android:onClick="OkButtonAtChangePasswordClickHandler"></Button>
    </RelativeLayout>
    
</LinearLayout>
