<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:background="@color/blue" android:id="@+id/group" android:layout_width="match_parent" android:textStyle="bold" android:gravity="center" android:textSize="40dp" android:text="@string/blockMemberButton"></TextView>
    <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_width="match_parent">
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
            <CheckBox android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/checkBox1" android:text="@string/name1" android:textSize="30dp"></CheckBox>
            <CheckBox android:layout_height="wrap_content" android:id="@+id/checkBox2" android:layout_width="match_parent" android:text="@string/name2" android:textSize="30dp"></CheckBox>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_height="wrap_content" android:layout_gravity="center|center_horizontal|bottom" android:orientation="vertical" android:id="@+id/linearLayout2" android:layout_width="match_parent" android:gravity="center">
        <Button android:layout_height="wrap_content" android:id="@+id/button1" android:layout_width="wrap_content" android:textSize="25dp" android:text="@string/confirmBlock"></Button>
    </LinearLayout>
    
</LinearLayout>
